Solve contrast issues

--- a/src/pages/Home_page/components/about/style.module.css
+++ b/src/pages/Home_page/components/about/style.module.css
@@ -56,7 +56,7 @@
 }
 .about_paragraph {
   margin-bottom: 3rem;
-  color: #848ea8;
+  color: #595f6f;
   font-size: 1.2rem;
 }
 .about_cv {
