--- a/src/pages/Home_page/components/projects/style.module.css
+++ b/src/pages/Home_page/components/projects/style.module.css
@@ -51,7 +51,7 @@
   border-radius: 0.5rem;
   box-shadow: 0 0 8px 1px #000;
   text-transform: capitalize;
-  color: #848ea8;
+  color: #595f6f;
   font-size: 1.2rem;
   transition: 0.1s ease-in-out;
   margin-bottom: 2rem;
